--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <div class="hero">
-  <p class="large brandon">Harry&#8217;s is live</p>
-  <p class="small brandon">Respecting the Face and Wallet<br>Since Like...Right Now.</p>
+  <p class="large brandon logo_margin"><%= image_tag('logo.png', width: '400px')%></p>
+  <p  class="small brandon slogan">Random text Random text</p>
+  <p class="small brandon description">A drone-based cloud platform for you.</p>
 </div>
 
 <div class="form-wrap clearfix <%= "ended" if Rails.application.config.ended %>">
