--- a/app/views/users/refer.html.erb
+++ b/app/views/users/refer.html.erb
@@ -12,8 +12,8 @@
     </div>
     <div class="share-wrap">
       <p class="why brandon">Don't leave your friends behind</p>
-      <p class="title brandon">INVITE FRIENDS &<br>Earn Product</p>
-      <p class="subtitle brandon">Share your unique link via email, Facebook<br>or Twitter and earn Harry's goods for<br>each friend who signs up.</p>
+      <p class="title brandon">INVITE FRIENDS &<br> WIN A DJI OSMO</p>
+      <p class="subtitle brandon">Share your unique link via email, Facebook<br>or Twitter and get a referral point for<br>each friend who signs up.</p>
       <div class="copy-link brandon"><%= root_url %>?ref=<%= @user.referral_code %></div>
       <% twitter_message = "#Shaving is evolving. Excited for @harrys to launch." %>
       <div class="social-links">
@@ -52,9 +52,9 @@
           <div class="sep"></div>
           <p><%= stop["html"].html_safe %></p>
 
-          <div class="tooltip">
-            <img src="<%= stop["image"] %>" height="254">
-          </div>
+          <!-- <div class="tooltip">
+            <img src="<%# stop["image"] %>" height="254">
+          </div> -->
         </li>
       <% end %>
     </ul>
@@ -81,7 +81,5 @@
     <% end %>
     <p class="check brandon">Keep checking</p>
 
-    <p class="ship brandon">We ship to the U.S. (& Canada Soon)</p>
-    <a class="policy brandon" href="/privacy-policy" target="_blank">Privacy Policy</a>
   </div>
 </div>
