social share changes

--- a/app/views/users/refer.html.erb
+++ b/app/views/users/refer.html.erb
@@ -15,7 +15,7 @@
       <p class="title brandon">INVITE FRIENDS &<br> WIN A DJI OSMO</p>
       <p class="subtitle brandon">Share your unique link via email, Facebook<br>or Twitter and get a referral point for<br>each friend who signs up.</p>
       <div class="copy-link brandon"><%= root_url %>?ref=<%= @user.referral_code %></div>
-      <% twitter_message = "#Shaving is evolving. Excited for @drofika to launch." %>
+      <% twitter_message = "#DroneDataInAction. Excited for the @drofika1HQ DJI giveaway" %>
       <div class="social-links">
         <a href="http://www.facebook.com/sharer/sharer.php?u=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&title=Drofikas" class="fb" target="_blank"></a>
         <div class="sep"></div>
