social share changes for fb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
 
   <meta property="og:title" content="Drofika’s is coming!"/>
-  <meta property="og:description" content="Shaving is evolving. Didn’t want to leave you all behind. Check out Drofika’s here."/>
+  <meta property="og:description" content="Putting your drone data into action. Didn’t want to leave you guys behind for the giveaway. Check Drofika out here."/>
   <meta property="og:image" content="<%= asset_path("logo.png") %>"/>
   <meta property="og:url" content="<%= root_url %>"/>
   <% if @is_mobile %>
